reduced img size

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               </div>
               <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
               <img class="showcase-content__img"
-                src="img/wap1.jpg"
+                src="img/wap1-small.jpg"
                 alt="An image of a mockup showing a phone with an apped opened on a table."
                 onclick="openModal('Wap')"
               >
