--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
     <title>Marvin Fretter - Freelance Design and Development</title>
   </head>
-
   <body>
-
     <header>
           <div class="hero__img-wrapper">
       <img src="img/illu/iPad_png.png" alt="" class="img-wrapper__left-img" ></img>
@@ -42,21 +40,26 @@
       <section class="about-section">
         <h2 class="about-section__heading">About Me</h2>
         <p class="about-section__paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
-          corporis hic esse, necessitatibus enim incidunt eligendi modi rerum
-          qui debitis in neque inventore repudiandae, soluta perferendis quaerat
-          eius similique explicabo deserunt delectus quis! Natus neque itaque
-          quod, dolore alias perspiciatis sapiente dicta, atque facilis ex
-          quibusdam voluptate, quaerat quisquam dignissimos iste voluptates
-          aspernatur recusandae illum accusantium beatae. Aliquam impedit est
-          voluptate corporis necessitatibus veniam ipsum, et ipsam sed commodi
-          deleniti officiis molestiae delectus incidunt placeat eum sapiente.
-          Amet similique sunt ducimus mollitia nulla sequi perferendis sit ut
-          laborum voluptas quaerat quae dicta dolore dolorem voluptate nemo,
-          voluptatibus repellendus deserunt tenetur! Totam ratione nisi ipsam
-          enim voluptates excepturi animi molestiae consequuntur suscipit
-          eligendi dicta itaque, hic iste reprehenderit. Voluptatum, molestias
-          nisi?
+          Hello there! My name is Marvin and I am an ui/ux designer and developer from Germany. 
+          My journey as a designer and developer began in 2014, when i decided to start studying 
+          science in the field of computer visualization and design (CVD). Sounds fancy, right? Well, it is. 
+          CVD is a bachelor-degree course that was created to teach students all the parts of design and 
+          informatics that correlate so that they can comprehend how to design and develop a user interface 
+          that is visually appealing, easy to use and ready to be deployed as an app of any kind.
+        </p>
+        <p class="about-section__paragraph">
+          Throughout the degree we’ve been taught to design and develop user interfaces from front to back. 
+          Meaning that we can guide an app all the way from the first idea to the live-release. Therefore I 
+          know how to find and evaluate the idea for a new feature or a whole product through research, personas, 
+          moodboards and red routes. But that’s just the first step. The next is to create user journey maps, 
+          wireframes and prototypes which will be used to generate a pattern library and prepare for the user 
+          interface development with a feature matrix.
+        </p>
+        <p class="about-section__paragraph">
+          To develop an user interface I usually use Vue.js as a framework but am also experienced with Angular. 
+          The styles are written in sass or less with the methodology of BEM which I’ve successfully applied to 
+          some projects as of now. When it comes to coding logic I’m most familiar with JavaScript but I took my 
+          time to try TypeScript in a project and am eager to get better at it. 
         </p>
         <p class="about-section__paragraph">
           <img
@@ -65,16 +68,10 @@
             alt="A portrait of me. I'm smiling, of course"
             loading="lazy"
           />
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-          sint, cupiditate, harum vitae rem facere esse aliquid dolores
-          recusandae alias iusto sapiente nemo enim aut voluptas laboriosam, eos
-          itaque libero quia qui quos reiciendis. Culpa similique nostrum
-          inventore delectus unde.
-        </p>
-        <p class="about-section__paragraph">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur
-          nulla, quidem dolorem alias cum fugit necessitatibus beatae laborum
-          odio corrupti animi obcaecati distinctio eius doloremque.
+          Yes, that’s me. Let me tell you a little bit about me and what I do after work. Besides designing, 
+          developing and drinking coffee I am also a social and sporty guy. I keep hustling on the weekend though, 
+          playing the bass for the melodic power metal band <a href="https://reinforcer.de">Reinforcer</a>. If you ever see me on stage
+          you'll notice that I look a lot meaner than I actually am. Well, that's just because it's metal.
         </p>
       </section>
       <section class="projects-section">
@@ -92,12 +89,13 @@
         </div>
         <h2 class="projects-section__heading">Projects</h2>
         <p class="projects-section__paragraph">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt
-          tempora, omnis modi reiciendis delectus nobis maxime quam consequatur
-          quo, aliquid harum ipsum praesentium exercitationem qui consectetur at
-          earum! Sint, repellendus! Sunt assumenda non, itaque nihil similique
-          deleniti perferendis eos explicabo facere at odit eaque atque,
-          obcaecati hic. Suscipit aliquid quia nihil animi. Placeat, eos!
+          I can’t really show a lot in this section because I’ve been designing and 
+          developing paid apps for private companies most of the time and am 
+          therefore not allowed to share the details. I did some projects in privat 
+          thought and will show you the outcome in this section. You can find the details 
+          about my usual design process in the section above, but know that there’s no 
+          one process that is a fit for every project. Purposefully rearranging the single 
+          steps of the process until it fit’s the circumstances is the job of every designer.
         </p>
         <div class="projects_section__showcase">
           <svg class="projects-section__arrow --left-arrow translate-x-minus-75-px" height="50" width="40" onclick="plusSlides(-1, 'left')">
@@ -177,10 +175,9 @@
           </svg>
         </div>
         <p class="projects-section__paragraph">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt
-          tempora, omnis modi reiciendis delectus nobis maxime quam consequatur
-          quo, aliquid harum ipsum praesentium exercitationem qui consectetur at
-          earum! Sint, repellendus! Sunt assumenda non.
+          I used Figma to create the prototypes and mockups of the projects 
+          in this section but they all began with a brainstorming and scribbles on a piece of paper. 
+          
         </p>
       </section>
       <section class="contact-section">
@@ -226,7 +223,7 @@
     <div class="modal-content__slides-wrapper">
     </div>
     <div class="modal-content__close" onclick="closeModal()"><span class="modal-content__close-button">&times;</span></div>
-    <p class="modal-content__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt tempora, omnis modi reiciendis delectus nobis maxime quam consequatur quo, aliquid harum ipsum praesentium exercitationem qui consectetur at earum! Sint, repellendus! Sunt assumenda non.</p>
+    <p class="modal-content__text">If you see this text then something went wrong. Please try again.</p>
   </div>
 </div>
 
