smartphone styles adjusted

--- a/index.html
+++ b/index.html
@@ -234,5 +234,5 @@
 <script src="scripts/slider.js" async></script>
 <script src="scripts/form.js" async></script>
   </body>
-  <footer><span>All Illustrations by Laisa Cordes</span><img class="footer__bicycle" src="img/rad-xs2.png" alt="A tiny bicycle in tho bottom right corner. That's how i roll."></footer>
+  <footer><span>Illustrations by Laisa Cordes | Pictures by Luisa Beerling</span><img class="footer__bicycle" src="img/rad-xs2.png" alt="A tiny bicycle in tho bottom right corner. That's how i roll."></footer>
 </html>
