--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2 class="about-section__heading">About Me</h2>
         <p class="about-section__paragraph">
           Hello there! My name is Marvin and I am an ui/ux designer and developer from Germany. 
-          My journey as a designer and developer began in 2014, when i decided to start studying 
+          My journey as a designer and developer began in 2014, when I decided to start studying 
           science in the field of computer visualization and design (CVD). Sounds fancy, right? Well, it is. 
           CVD is a bachelor-degree course that was created to teach students all the parts of design and 
           informatics that correlate so that they can comprehend how to design and develop a user interface 
