--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="Description" content="Hi, my name is Marvin Fretter and I'm a freelance web designer and developer from Germany. Feel free to contact me if you need someone to do your design and development.">
-
+    <meta name="msvalidate.01" content="FC4953CD9F8040DCEDCD24E2C8B970D0" />
+    <meta name="google-site-verification" content="MF7RcFqyFQGOKGp6dFGhGoQFtjQJ3lBw4wRpoRNaL2o" />
+    
     <link rel="stylesheet" href="styles/utilities.css" />
     <!-- <link rel="stylesheet" href="styles/scrollbar.css" /> -->
     <link rel="stylesheet" href="styles/animations.css" />
