css inlined and img size optimized

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="Description" content="Marvin Fretter. UI/UX Design and Development from Germany." />
     <meta name="msvalidate.01" content="FC4953CD9F8040DCEDCD24E2C8B970D0" />
     <meta name="google-site-verification" content="MF7RcFqyFQGOKGp6dFGhGoQFtjQJ3lBw4wRpoRNaL2o" />
-    
-    <link rel="stylesheet" href="styles/utilities.css" />
-    <!-- <link rel="stylesheet" href="styles/scrollbar.css" /> -->
+
     <link rel="stylesheet" href="styles/animations.css" />
     <link rel="stylesheet" href="styles/transformations-and-filters.css" />
     <link rel="stylesheet" href="styles/modal.css" async/>
@@ -18,7 +16,7 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/queries.css" />
 
-    <style>
+    <style type="text/css">
       
 /* mukta-regular - latin */
 @font-face {
@@ -249,14 +247,14 @@ footer {
               </div>
               <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
               <img class="showcase-content__img"
-                src="img/wap1-small.jpg"
+                src="img/wap1-small.webp"
                 alt="An image of a mockup showing a phone with an apped opened on a table."
                 onclick="openModal('Wap')"
               >
               </div>
               <div class="main-content__slide slide-right" ><h3 class="showcase-content__heading"></h3>
                 <img class="showcase-content__img"
-                src="img/deep1.jpg" 
+                src="img/deep1.webp" 
                 alt="A mockup of some of the projects i have done. The mockups float above a ocean blue canvas in an angle of 45 degrees."
                 onclick="openModal('Deep')"
                 >
