--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/contact-form.css" async/>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/queries.css" />
+    <link rel="stylesheet" href="styles/scrollbar.css" />
 
     <style type="text/css">
       
