--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ footer {
 
 <div class="modal" role="dialog" aria-labelledby="modal-content__header" aria-describedby="modal-content__text">
   <div class="modal__grid">
-    <div class="modal-content__header">test</div>
+    <div class="modal-content__header"></div>
     <img class="modal-content__img" src="" alt="">
     <div class="modal-content__slides-wrapper">
     </div>
